WP-9042 Adding the fixes to the Alumni responsive banner for the banner alignment and to the icon position for the mobile portrait.

--- a/css/conditionals/blocks/menu-alumni-utility-nav.css
+++ b/css/conditionals/blocks/menu-alumni-utility-nav.css
@@ -66,13 +66,13 @@
     width: 20%;
   }
   .page-alumni .region-utility .menu-mlid-37616 a:before {
-    background: url("../../../images/icons/icon-directory-36x36.png") 15px center no-repeat;
+    background: url("../../../images/icons/icon-directory-36x36.png") 21px center no-repeat;
     content: " ";
     display: block;
     height: 49px;
     position: absolute;
     top: 10px;
-    width: 54px;
+    width: 58px;
   }
   .page-alumni .region-utility .menu-mlid-37621 {
     width: 20%;
@@ -106,7 +106,7 @@
     width: 20%;
   }
   .page-alumni .region-utility .menu-mlid-37631 a:before {
-    background: url("../../../images/icons/icon-login-36x36.png") 15px 8px no-repeat;
+    background: url("../../../images/icons/icon-login-36x36.png") 19px 8px no-repeat;
     content: " ";
     display: block;
     height: 45px;
