--- a/css/style.css
+++ b/css/style.css
@@ -13088,6 +13088,9 @@ button.checkbox-clear-all {
     background: #f4f4f4;
   }
 }
+.page-alumni #banner {
+  margin-top: 18px;
+}
 
 .banner-title,
 .banner-subtitle {
@@ -13195,7 +13198,7 @@ button.checkbox-clear-all {
 }
 @media (max-width: 62.4375em) {
   .page-alumni .banner-title {
-    line-height: 1.9;
+    line-height: 2.5;
   }
 }
 @media (max-width: 62.4375em) {
