--- a/sass/partials/design/_banner.sass
+++ b/sass/partials/design/_banner.sass
@@ -8,6 +8,8 @@
     padding: 14px 0 11px
   +breakpoint($bp-for-phone-tablet-range)
     background: $grey-hp
+  .page-alumni &
+    margin-top: 18px
 
 // Banner title and subtitles
 .banner-title,
@@ -72,7 +74,7 @@
         border-bottom: 2px solid $red
         text-decoration: none
     +breakpoint($bp-tablet-port-max)
-      line-height: 1.9
+      line-height: 2.5
   +breakpoint($bp-tablet-port-max)
     font-size: 18px
     line-height: 0
